<resources>
    <string name="app_name">Kharcha</string>
    <string name="owed_to_you">owed to you</string>
    <string name="owed_by_you">owed by you</string>
    <string name="end_msg">KHARCHA KAM KAR!</string>
    <string name="title">Title</string>
    <string name="amount">Amount</string>
    <string name="person">Person</string>
    <string name="intro_msg">Managing your finances made easy! Track your expenses, and achieve your financial goals!</string>
    <string name="logInBtnTxt">Log in with Google</string>
    <string name="default_web_client_id">184106029838-fu0opirc19nudug4aggtsbgfdgcknmfd.apps.googleusercontent.com</string>
    <string name="kharcha">K H A R C H A</string>
</resources>